# type-config

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/: __main__.py  config.mochi  setup.py
src/config_types/: cast.py  validate.py
src/easy_config/: EasyConfig_types.py  __init__.py
src/type_config/: __init__.py  errors.py
testing/: __main__.py  config.mochi  test_cleaning.py  test_create_config.py  test_get_option.py  test_healing.py  test_merging.py  test_validation.py
testing/config_types/: cast.py  custom_types.py  validate.py
tests/: test_cleaning.py  test_create_config.py  test_get_option.py  test_getters.py  test_healing.py  test_merging.py  test_validation.py
